<resources>
    <string name="app_name">MentorAndroidTask</string>
<!--    MainActivity-->
    <string name="setting">Settings</string>
    <string name="contactsButtonText">view my contacts</string>
    <string name="editProfileButton">Edit profile</string>
    <string name="helpingText">Go to settings and fill out the profile</string>
    <string name="userName">User Name</string>
    <string name="career">Career</string>
    <string name="homeAddress">Home address</string>
<!--    AuthActivity-->
    <string name="loginHelloText">Hello!</string>
    <string name="loginHelpText">Enter your email and password below</string>
    <string name="emailEditText">E-mail</string>
    <string name="passEditText">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="loginButton">Login</string>
    <string name="signUpHelpText">Don\'t have account?</string>
    <string name="signUpText">Sign up</string>
    <string name="emailError">Wrong email!</string>
    <string name="passError">Wrong password!</string>
<!--    SignUpActivity-->
    <string name="registerHelloText">Let\'s get acquainted</string>
    <string name="registerHelpText">Fill out the profile and go to the application!</string>
    <string name="registerButton">Register</string>
    <string name="registrationPolicy">By clicking Register you agree to our Terms and Conditions</string>
    <string name="signInHelpText">Already have an account?</string>
    <string name="signInText">Sign In</string>
    <string name="or">or</string>
</resources>