<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    style="@style/backgroud"
    android:id="@+id/backgroud">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/helloTextLinearLayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        app:layout_constraintTop_toTopOf="@id/backgroud"
        app:layout_constraintStart_toStartOf="@id/backgroud"
        app:layout_constraintEnd_toEndOf="@id/backgroud">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_gravity="center"
            android:id="@+id/helloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHelloText"
            android:textColor="@color/white_100"
            android:textSize="24sp"
            android:fontFamily="@font/tirogurmukhi_regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_100"
            android:textSize="12sp"
            android:fontFamily="@font/tirogurmukhi_regular"
            android:text="@string/loginHelpText"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/helloTextLinearLayout"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        android:textColorHint="@color/white_100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/emailEditText"
            android:textColor="@color/white_100"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passEditTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        android:textColorHint="@color/white_100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/passEditText"
            android:inputType="textPassword"
            android:textColor="@color/white_100"/>


    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passEditTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/backgroud"
        android:layout_marginStart="16dp"
        android:textColor="@color/gray"
        android:buttonTint="@color/white_100"
        android:text="@string/rememberMe"
        android:fontFamily="@font/tirogurmukhi_regular"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rememberMeCheckBox"
        app:layout_constraintBottom_toBottomOf="@id/rememberMeCheckBox"
        app:layout_constraintEnd_toEndOf="@id/backgroud"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:background="#00000000"
        android:textColor="@color/white_100"
        android:textAllCaps="false"
        android:text="@string/forgotPass"
        android:fontFamily="@font/tirogurmukhi_regular"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loginButtonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/signUpTextLinearLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/outline_orange_button">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#00000000"
            android:textColor="@color/white_100"
            android:text="@string/loginButton"
            android:textSize="24sp"
            android:onClick="login"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/signUpTextLinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="@id/backgroud"
    app:layout_constraintStart_toStartOf="@id/backgroud"
    app:layout_constraintEnd_toEndOf="@id/backgroud"
    android:layout_marginBottom="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpHelpText"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:fontFamily="@font/tirogurmukhi_regular"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/signUpText"
        android:textColor="@color/white_100"
        android:fontFamily="@font/tirogurmukhi_regular"
        android:onClick="signUp"/>

</androidx.appcompat.widget.LinearLayoutCompat>




</androidx.constraintlayout.widget.ConstraintLayout>