<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    style="@style/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/helloTextGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/helloTextView"
        app:layout_constraintTop_toTopOf="@id/helloTextGuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerHelloText"
        android:textColor="@color/white_main"
        android:textSize="24sp"
        android:fontFamily="@font/open_sans_regular"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/smallHelloTextView"
        app:layout_constraintTop_toBottomOf="@id/helloTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_main"
        android:textSize="12sp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/registerHelpText"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_indent"
        android:layout_marginEnd="@dimen/main_indent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/smallHelloTextView"
        app:errorEnabled="true"
        style="@style/inputEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/emailEditText"
            android:textColor="@color/white_main"
            android:fontFamily="@font/open_sans_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passEditTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
        android:layout_marginStart="@dimen/main_indent"
        android:layout_marginEnd="@dimen/main_indent"
        app:errorEnabled="true"
        style="@style/inputEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/passEditText"
            android:inputType="textPassword"
            android:textColor="@color/white_main"
            android:fontFamily="@font/open_sans_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passEditTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/main_indent"
        android:textColor="@color/gray"
        android:buttonTint="@color/white_main"
        android:text="@string/rememberMe"
        android:fontFamily="@font/open_sans_regular"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@id/orTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/main_indent"
        android:layout_marginEnd="@dimen/main_indent"
        android:layout_marginBottom="@dimen/half_main_indent"
        android:background= "@drawable/googlebutton"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="Google"
        android:drawableStart="@drawable/ic_google" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/or"
        android:textColor="@color/white_main"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginBottom="@dimen/half_main_indent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerPolicy"
        android:layout_marginStart="@dimen/main_indent"
        android:layout_marginEnd="@dimen/main_indent"
        android:layout_marginBottom="@dimen/main_indent"
        android:background="@drawable/outline_orange_button"
        android:textColor="@color/white_main"
        android:text="@string/registerButton"
        android:textSize="@dimen/button_text_size"
        android:fontFamily="@font/open_sans_regular"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/signInTextLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/registrationPolicy"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/signInTextLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/main_indent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInHelpText"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:fontFamily="@font/open_sans_regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/signInText"
            android:textColor="@color/white_main"
            android:fontFamily="@font/open_sans_regular"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>